update the install config file to reflect new components and new macro names

--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -5,8 +5,9 @@ list(APPEND CMAKE_MODULE_PATH "@CMAKE_MODULE_LOCATION@")
 include(${CMAKE_CURRENT_LIST_DIR}/AluminumConfigVersion.cmake)
 set(ALUMINUM_VERSION ${PACKAGE_VERSION})
 
-set(ALUMINUM_HAS_CUDA @ALUMINUM_HAS_CUDA@)
-set(ALUMINUM_HAS_NCCL @ALUMINUM_HAS_NCCL@)
+set(AL_HAS_CUDA @AL_HAS_CUDA@)
+set(AL_HAS_MPI_CUDA @AL_HAS_MPI_CUDA@)
+set(AL_HAS_NCCL @AL_HAS_NCCL@)
 
 set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@")
 find_package(MPI 3.0 REQUIRED COMPONENTS CXX)
@@ -26,16 +27,11 @@ if (ALUMINUM_HAS_CUDA)
   set_property(TARGET cuda::cuda
     PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CUDA_INCLUDE_DIRS})
 
-  set_property(TARGET cuda::cuda
-    PROPERTY INTERFACE_COMPILE_DEFINITIONS "ALUMINUM_HAS_CUDA")
-
   if (ALUMINUM_HAS_NCCL)
     find_package(NCCL 2.0.0 REQUIRED)
 
     set_property(TARGET cuda::cuda APPEND
       PROPERTY INTERFACE_LINK_LIBRARIES cuda::nccl)
-    set_property(TARGET cuda::cuda APPEND
-      PROPERTY INTERFACE_COMPILE_DEFINITIONS "ALUMINUM_HAS_NCCL")
   endif ()
 endif (ALUMINUM_HAS_CUDA)
 
