Change name of library from libaluminum to libAl

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -8,7 +8,7 @@ foreach(src ${BENCHMARK_SRCS})
   string(REPLACE ".cpp" ".exe" _benchmark_exe_name "${src}")
   add_executable(${_benchmark_exe_name} ${src})
   target_link_libraries(${_benchmark_exe_name}
-    PRIVATE aluminum aluminum_test_headers)
+    PRIVATE Al aluminum_test_headers)
   target_include_directories(
     ${_benchmark_exe_name} PRIVATE ${CMAKE_SOURCE_DIR}/test)
 endforeach()
