--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -28,6 +28,10 @@ if (AL_HAS_CUDA)
     PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CUDA_INCLUDE_DIRS})
 
   if (AL_HAS_NCCL)
+    if (NOT NCCL_DIR)
+      set(NCCL_DIR "@NCCL_DIR@")
+    endif()
+
     find_package(NCCL 2.0.0 REQUIRED)
 
     set_property(TARGET cuda::cuda APPEND
