tweak install location for some files

--- a/src/mpi_cuda/CMakeLists.txt
+++ b/src/mpi_cuda/CMakeLists.txt
@@ -10,6 +10,10 @@ set_full_path(THIS_DIR_CUDA_SOURCES
   cuda_kernels.cu
   )
 
+# Custom install
+install(FILES ${THIS_DIR_HEADERS}
+  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/aluminum/mpi_cuda)
+
 # Propagate the files up the tree
 set(CUDA_SOURCES ${CUDA_SOURCES} ${THIS_DIR_CUDA_SOURCES} PARENT_SCOPE)
 set(HEADERS ${HEADERS} ${THIS_DIR_HEADERS} PARENT_SCOPE)
