--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,11 @@ set_full_path(THIS_DIR_CXX_SOURCES
   mpi_impl.cpp
   )
 
+if (AL_HAS_CUDA)
+  list(APPEND THIS_DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/cuda.hpp")
+  list(APPEND THIS_DIR_CXX_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/cuda.cpp")
+endif ()
+
 if (AL_HAS_MPI_CUDA)
   list(APPEND THIS_DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/mpi_cuda_impl.hpp")
   list(APPEND THIS_DIR_CXX_SOURCES
