Add openmp flags to link line for xl compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,11 +23,11 @@ option(ALUMINUM_ENABLE_CUDA "Enable CUDA support." OFF)
 option(ALUMINUM_ENABLE_MPI_CUDA "Enable MPI-CUDA support." OFF)
 option(ALUMINUM_ENABLE_NCCL "Enable NCCL support." OFF)
 if (ALUMINUM_ENABLE_MPI_CUDA AND NOT ALUMINUM_ENABLE_CUDA)
-  message(status "MPI-CUDA support requested; enabling CUDA support, too.")
+  message(STATUS "MPI-CUDA support requested; enabling CUDA support, too.")
   set(ALUMINUM_ENABLE_CUDA ON)
 endif ()
 if (ALUMINUM_ENABLE_NCCL AND NOT ALUMINUM_ENABLE_CUDA)
-  message(status "NCCL support requested; enabling CUDA support, too.")
+  message(STATUS "NCCL support requested; enabling CUDA support, too.")
   set(ALUMINUM_ENABLE_CUDA ON)
 endif ()
 
@@ -58,8 +58,12 @@ if (OPENMP_FOUND)
     INTERFACE_COMPILE_OPTIONS
     $<$<COMPILE_LANGUAGE:CXX>:${__omp_compile_options}>)
   unset(__omp_compile_options)
-endif ()
 
+  if (${CMAKE_CXX_COMPILER} MATCHES ".*xl[cC]")
+    set_property(TARGET OpenMP::OpenMP_CXX APPEND PROPERTY
+      INTERFACE_LINK_LIBRARIES "${OpenMP_CXX_FLAGS}")
+  endif ()
+endif (OPENMP_FOUND)
 if (ALUMINUM_ENABLE_CUDA)
   find_package(CUDA)
   if (CUDA_FOUND)
