Update benchmark overlap.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,7 +1,6 @@
 set(BENCHMARK_SRCS
   benchmark_allreduces.cpp
   benchmark_nballreduces.cpp
-  benchmark_overlap.cpp
   benchmark_reductions.cpp)
 
 foreach(src ${BENCHMARK_SRCS})
@@ -12,3 +11,8 @@ foreach(src ${BENCHMARK_SRCS})
   target_include_directories(
     ${_benchmark_exe_name} PRIVATE ${CMAKE_SOURCE_DIR}/test)
 endforeach()
+
+add_executable(benchmark_overlap.exe benchmark_overlap.cpp
+  $<$<BOOL:${AL_HAS_CUDA}>:wait.cu>)
+target_link_libraries(benchmark_overlap.exe PRIVATE Al aluminum_test_headers)
+target_include_directories(benchmark_overlap.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
