Update cmake to link CUDA libraries into everything when building with CUDA.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -8,6 +8,9 @@ foreach(src ${BENCHMARK_SRCS})
   add_executable(${_benchmark_exe_name} ${src})
   target_link_libraries(${_benchmark_exe_name}
     PRIVATE Al aluminum_test_headers)
+  if (AL_HAS_CUDA)
+    target_link_libraries(${_benchmark_exe_name} PUBLIC cuda)
+  endif ()
   target_include_directories(
     ${_benchmark_exe_name} PRIVATE ${CMAKE_SOURCE_DIR}/test)
 endforeach()
@@ -15,4 +18,7 @@ endforeach()
 add_executable(benchmark_overlap.exe benchmark_overlap.cpp
   $<$<BOOL:${AL_HAS_CUDA}>:wait.cu>)
 target_link_libraries(benchmark_overlap.exe PRIVATE Al aluminum_test_headers)
+if (AL_HAS_CUDA)
+  target_link_libraries(benchmark_overlap.exe PUBLIC cuda)
+endif ()
 target_include_directories(benchmark_overlap.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
