--- a/src/mpi_cuda/CMakeLists.txt
+++ b/src/mpi_cuda/CMakeLists.txt
@@ -5,6 +5,11 @@ set_full_path(THIS_DIR_HEADERS
   cuda_kernels.hpp
   cuda_local_transfer.hpp
   util.hpp
+  communicator.hpp
+  )
+
+set_full_path(THIS_DIR_CXX_SOURCES
+  communicator.cpp
   )
 
 set_full_path(THIS_DIR_CUDA_SOURCES
@@ -16,5 +21,6 @@ install(FILES ${THIS_DIR_HEADERS}
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/aluminum/mpi_cuda)
 
 # Propagate the files up the tree
+set(CXX_SOURCES ${CXX_SOURCES} ${THIS_DIR_CXX_SOURCES} PARENT_SCOPE)
 set(CUDA_SOURCES ${CUDA_SOURCES} ${THIS_DIR_CUDA_SOURCES} PARENT_SCOPE)
 set(HEADERS ${HEADERS} ${THIS_DIR_HEADERS} PARENT_SCOPE)
