--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,6 @@ if (AL_HAS_CUDA)
     "${CMAKE_CURRENT_SOURCE_DIR}/helper_kernels.hpp")
   list(APPEND THIS_DIR_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/cudacommunicator.hpp")
   list(APPEND THIS_DIR_CXX_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/cuda.cpp")
-  list(APPEND THIS_DIR_CUDA_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/helper_kernels.cu")
 endif ()
 
 if (AL_HAS_MPI_CUDA)
@@ -37,7 +36,7 @@ endif ()
 
 set(ALUMINUM_HEADERS "${HEADERS}" "${THIS_DIR_HEADERS}")
 set(ALUMINUM_CXX_SOURCES "${CXX_SOURCES}" "${THIS_DIR_CXX_SOURCES}")
-set(ALUMINUM_CUDA_SOURCES "${CUDA_SOURCES}" "${THIS_DIR_CUDA_SOURCES}")
+set(ALUMINUM_CUDA_SOURCES "${CUDA_SOURCES}")
 
 add_library(Al
   "${ALUMINUM_CXX_SOURCES}" "${ALUMINUM_CUDA_SOURCES}" "${ALUMINUM_HEADERS}")
