Prototype RMA Put for intra-node GPUs
Publicly visible functions are all contained in namespace Al::ext.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,4 +45,12 @@ if (AL_HAS_CUDA)
   test_stream_mem_ops.cpp ${TEST_HEADERS})
   target_link_libraries(test_stream_mem_ops.exe PRIVATE Al)
   target_link_libraries(test_stream_mem_ops.exe PUBLIC cuda)
+  add_executable(test_rma_ring.exe
+    test_rma_ring.cpp ${TEST_HEADERS})
+  target_link_libraries(test_rma_ring.exe PRIVATE Al)
+  target_link_libraries(test_rma_ring.exe PUBLIC cuda)
+  add_executable(test_rma_halo_exchange.exe
+    test_rma_halo_exchange.cpp ${TEST_HEADERS})
+  target_link_libraries(test_rma_halo_exchange.exe PRIVATE Al)
+  target_link_libraries(test_rma_halo_exchange.exe PUBLIC cuda)
 endif ()
