Fix the NCCL module and the way NCCL is handled by the exported config file

--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -39,14 +39,16 @@ if (AL_HAS_CUDA)
     PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CUDA_INCLUDE_DIRS})
 
   if (AL_HAS_NCCL)
-    find_package(NCCL 2.0.0)
+    find_package(NCCL 2.0.0 QUIET)
     if (NOT NCCL_FOUND)
       if (NOT NCCL_DIR)
         set(NCCL_DIR "@NCCL_DIR@")
       endif()
       if (NOT NCCL_DIR AND NOT NCCL_LIBRARY AND NOT NCCL_INCLUDE_PATH)
-        set(NCCL_LIBRARY "@NCCL_LIBRARY@")
-        set(NCCL_INCLUDE_PATH "@NCCL_INCLUDE_PATH@")
+        set(NCCL_LIBRARY "@NCCL_LIBRARY@" CACHE FILEPATH
+          "The NCCL library" FORCE)
+        set(NCCL_INCLUDE_PATH "@NCCL_INCLUDE_PATH@" CACHE PATH
+          "The NCCL header include directory" FORCE)
       endif ()
       find_package(NCCL 2.0.0 REQUIRED)
     endif (NOT NCCL_FOUND)
