change the way we propagate the MPI_CXX_COMPILER from Aluminum

--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -9,7 +9,8 @@ set(AL_HAS_CUDA @AL_HAS_CUDA@)
 set(AL_HAS_MPI_CUDA @AL_HAS_MPI_CUDA@)
 set(AL_HAS_NCCL @AL_HAS_NCCL@)
 
-set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@")
+set(MPI_CXX_COMPILER "@MPI_CXX_COMPILER@" CACHE FILEPATH
+  "The MPI CXX compiler wrapper.")
 find_package(MPI 3.0 REQUIRED COMPONENTS CXX)
 find_package(OpenMP REQUIRED COMPONENTS CXX)
 find_package(HWLOC REQUIRED)
