Enable MPI-CUDA RMA only when requested.
Add -DALUMINUM_ENABLE_MPI_CUDA_RMA=ON when calling cmake to enable it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,11 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 option(ALUMINUM_ENABLE_CUDA "Enable CUDA support." OFF)
 option(ALUMINUM_ENABLE_MPI_CUDA "Enable MPI-CUDA support." OFF)
 option(ALUMINUM_ENABLE_NCCL "Enable NCCL support." OFF)
+option(ALUMINUM_ENABLE_MPI_CUDA_RMA "Enable RMA in MPI-CUDA." OFF)
+if (ALUMINUM_ENABLE_MPI_CUDA_RMA AND NOT ALUMINUM_ENABLE_MPI_CUDA)
+  message(STATUS "RMA in MPI-CUDA requested; enabling MPI-CUDA support, too.")
+  set(ALUMINUM_ENABLE_CUDA ON)
+endif ()
 if (ALUMINUM_ENABLE_MPI_CUDA AND NOT ALUMINUM_ENABLE_CUDA)
   message(STATUS "MPI-CUDA support requested; enabling CUDA support, too.")
   set(ALUMINUM_ENABLE_CUDA ON)
@@ -93,6 +98,9 @@ if (ALUMINUM_ENABLE_CUDA)
     if (ALUMINUM_ENABLE_MPI_CUDA)
       set(AL_HAS_CUDA TRUE)
       set(AL_HAS_MPI_CUDA TRUE)
+      if (ALUMINUM_ENABLE_MPI_CUDA_RMA)
+	set(AL_HAS_MPI_CUDA_RMA TRUE)
+      endif ()
     endif ()
 
     # Add the cuda imported target
