--- a/src/mpi_cuda/CMakeLists.txt
+++ b/src/mpi_cuda/CMakeLists.txt
@@ -13,14 +13,21 @@ set_full_path(THIS_DIR_HEADERS
   scatter.hpp
   pt2pt.hpp
   util.hpp
-  rma.hpp
-  rma_ipc.hpp
   )
 
 set_full_path(THIS_DIR_CXX_SOURCES
   communicator.cpp
-  rma.cpp
   )
+
+if (AL_HAS_MPI_CUDA_RMA)
+  list(APPEND THIS_DIR_HEADERS
+    "${CMAKE_CURRENT_SOURCE_DIR}/rma.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/rma_ipc.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/rma_null.hpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/rma_self.hpp")
+  list(APPEND THIS_DIR_CXX_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/rma.cpp")
+endif ()
 
 set_full_path(THIS_DIR_CUDA_SOURCES
   cuda_kernels.cu
