CMake requires CUDA >= 9.0.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,7 +136,7 @@ if (OPENMP_FOUND)
   endif ()
 endif (OPENMP_FOUND)
 if (ALUMINUM_ENABLE_CUDA)
-  find_package(CUDA)
+  find_package(CUDA 9.0)
   if (CUDA_FOUND)
     enable_language(CUDA)
     set(AL_HAS_CUDA TRUE)
