--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set_full_path(THIS_DIR_HEADERS
   mempool.hpp
   mpi_impl.hpp
   profiling.hpp
+  trace.hpp
   tuning_params.hpp
   utils.hpp
   )
@@ -14,6 +15,7 @@ set_full_path(THIS_DIR_CXX_SOURCES
   mpi_impl.cpp
   profiling.cpp
   progress.cpp
+  trace.cpp
   )
 
 if (AL_HAS_CUDA)
