fix all build errors and warnings when building without cuda

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -31,18 +31,16 @@ if (AL_HAS_CUDA)
 endif ()
 target_include_directories(benchmark_pingpong.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
 
-add_executable(benchmark_events.exe benchmark_events.cpp
-  $<$<BOOL:${AL_HAS_CUDA}>:wait.cu>)
-target_link_libraries(benchmark_events.exe PRIVATE Al aluminum_test_headers)
 if (AL_HAS_CUDA)
+  add_executable(benchmark_events.exe benchmark_events.cpp wait.cu)
+  target_link_libraries(benchmark_events.exe PRIVATE Al aluminum_test_headers)
   target_link_libraries(benchmark_events.exe PUBLIC cuda)
-endif ()
-target_include_directories(benchmark_events.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
+  target_include_directories(
+    benchmark_events.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
 
-add_executable(benchmark_waits.exe benchmark_waits.cpp
-  $<$<BOOL:${AL_HAS_CUDA}>:wait.cu>)
-target_link_libraries(benchmark_waits.exe PRIVATE Al aluminum_test_headers)
-if (AL_HAS_CUDA)
+  add_executable(benchmark_waits.exe benchmark_waits.cpp wait.cu)
+  target_link_libraries(benchmark_waits.exe PRIVATE Al aluminum_test_headers)
   target_link_libraries(benchmark_waits.exe PUBLIC cuda)
+  target_include_directories(
+    benchmark_waits.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
 endif ()
-target_include_directories(benchmark_waits.exe PRIVATE ${CMAKE_SOURCE_DIR}/test)
