Finer-grained profiling ranges for send/recv.
Also add a #define for whether any profiling is enabled. This is mostly to help sensitive code paths ensure there is no overhead when profiling is not enabled.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,6 +206,10 @@ endif ()
 # Build library and executables
 
 # Write the configuration file
+# Update to include other profiling interfaces as needed:
+if (AL_HAS_NVPROF)
+  set(AL_HAS_PROF ON)
+endif ()
 configure_file(
   "${CMAKE_SOURCE_DIR}/cmake/Al_config.hpp.in"
   "${CMAKE_BINARY_DIR}/Al_config.hpp" @ONLY)
