--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -6,6 +6,7 @@ include(${CMAKE_CURRENT_LIST_DIR}/AluminumConfigVersion.cmake)
 set(ALUMINUM_VERSION ${PACKAGE_VERSION})
 
 set(AL_HAS_CUDA @AL_HAS_CUDA@)
+set(AL_HAS_ROCM @AL_HAS_ROCM@)
 set(AL_HAS_MPI_CUDA @AL_HAS_MPI_CUDA@)
 set(AL_HAS_NCCL @AL_HAS_NCCL@)
 
