add openmp updates to install target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -286,5 +286,8 @@ install(FILES
   "${CMAKE_BINARY_DIR}/Al_config.hpp" DESTINATION ${INCLUDE_INSTALL_DIRS})
 
 # Install the CMake modules we need
-install(FILES cmake/FindHWLOC.cmake cmake/FindNCCL.cmake
+install(FILES
+  cmake/FindHWLOC.cmake
+  cmake/FindNCCL.cmake
+  cmake/TryLLVMOpenMP.cmake
   DESTINATION ${CMAKE_INSTALL_DIR})
