provide a hint for OpenMP_DIR if it's not set in downstream builds

--- a/cmake/AluminumConfig.cmake.in
+++ b/cmake/AluminumConfig.cmake.in
@@ -15,6 +15,9 @@ find_package(MPI 3.0 REQUIRED COMPONENTS CXX)
 
 find_package(OpenMP QUIET COMPONENTS CXX)
 if (NOT OpenMP_FOUND AND CMAKE_CXX_COMPILER_ID MATCHES ".*[Cc]lang")
+  if (NOT OpenMP_DIR)
+    set(OpenMP_DIR "@OpenMP_DIR@")
+  endif ()
   include(TryLLVMOpenMP)
 endif ()
 if (OpenMP_FOUND)
